# fluid-sim

./: .gitignore  CMakeLists.txt  main.cpp
lib/: fluid.h  ink_fluid.h  map_fluid.h  noise.h
lib/math/: advect.h  divergence.h  gradient.h  jacobi.h  math.h  noise.h  util.h
